package org.example.Ecommerce;

abstract class MetodoPago {

    abstract void ProcesarPago(double importe);

}
